# yew-axum-template

./: Cargo.toml
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: fetch.rs  main.rs
frontend/src/components/: chat.rs  home.rs  login.rs  mod.rs  simcalendar.rs  websocket_provider.rs
macros/: Cargo.toml
macros/src/: lib.rs
server/: Cargo.toml
server/assets/: config.toml
server/assets/css/: app.css
server/src/: app_error.rs  client_pool.rs  config.rs  db.rs  main.rs  redis.rs  router.rs  token.rs
server/src/model/: db.rs  mod.rs  user.rs
server/src/model/repositories/: user_repository.rs
shared/: Cargo.toml
shared/src/: lib.rs  requests.rs  sessionconfig.rs  shared_error.rs
