[package]
name = "frontent"
version = "0.1.0"
edition = "2024"


[dependencies]
shared = { path = "../shared" }

anyhow = "1.0.99"
gloo-storage = "0.3.0"
serde_json = "1.0.143"
wasm-bindgen-futures = "0.4.51"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
log = "0.4.28"
gloo-timers = "0.3.0"
web-sys = "0.3.78"
yew-websocket = "1.21.0"
wasm-bindgen = "0.2.101"
js-sys = "0.3.78"
gloo = "0.10.0"
serde = "1.0.219"



