[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]

shared = { path = "../shared", features = [ "server" ] }

anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version= "1", features = ["macros", "rt-multi-thread", "signal", "net", "fs"] }
serde_json = "1"
#clap = { version = "4.2.7", features = ["derive"] }
axum = { version = "0.8.4", features = ["ws"] }
#rand = "0.9.2"
#linked-hash-map = "0.5.6"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
#tracing = "0.1.41"
tower = "0.5.2"
openssl = { version = "0.10", features = ["vendored"] }
#dashmap = "7.0.0-rc2"
thiserror = "2.0.12"
log = "0.4.27"
#scopeguard = "1.2.0"
#indoc = "2.0.6"
toml = "0.9.5"
redis = { version = "0.32.5", features = ["tokio-comp"] }
#bytes = "1.10.1"
#http-body-util = "0.1.3"
uuid = { version = "1.18.1", features = ["v4"] }
sled = "0.34.7"
garde = "0.22.0"
bincode = { version = "2.0.1", features = ["serde"] }
#boa_engine = "0.20.0"
